--- a/config/database.yml
+++ b/config/database.yml
@@ -1,22 +1,18 @@
-# SQLite version 3.x
-#   gem install sqlite3-ruby (not necessary on OS X Leopard)
-development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
+<%
+  file  = File.join(ENV['HOME'], 'etc', 'assda', 'dbconfig.yml')
+  @conf = File.exist?(file) && YAML::load(File.open(file))['production'] || {}
+%>
+template: &template
+  adapter:  <%= defined?(JRUBY_VERSION) ? 'jdbcmysql' : 'mysql2' %>
+  pool:     5
+  timeout:  5000
+  database: <%= @conf['database'] %>
+  host:     <%= @conf['host'] %>
+  username: <%= @conf['username'] %>
+  password: <%= @conf['password'] %>
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+  <<: *template
+
+development:
+  <<: *template
