--- a/config/database.yml
+++ b/config/database.yml
@@ -28,6 +28,10 @@ production_logs:
   database: <%= @conf[rails_env+'_logs']['database'] %>
   username: <%= @conf[rails_env+'_logs']['username'] %>
 
+# This database (and its development/test counterparts) is, as of 27-4-2011,
+# are only required for the StatementEJB table, which is no longer used. Its
+# configuration is left in case it's needed in the future, but it might be
+# worth cleaning this up on deployment.
 production_nesstar:
   <<: *template
   database: <%= @conf[rails_env+'_nesstar']['database'] %>
