--- a/config/database.yml
+++ b/config/database.yml
@@ -27,6 +27,19 @@ staff_nesstar:
   database: 'db/prod_nesstar.db'
 
 
+devs:
+  adapter: sqlite3
+  database: 'db/prod.db'
+
+devs_logs:
+  adapter: sqlite3
+  database: 'db/prod_logs.db'
+
+devs_nesstar:
+  adapter: sqlite3
+  database: 'db/prod_nesstar.db'
+
+
 development:
   adapter: sqlite3
   database: 'db/dev.db'
