Fixed escaping of link in templates fixture

--- a/spec/fixtures/templates.yml
+++ b/spec/fixtures/templates.yml
@@ -225,7 +225,7 @@ undertaking_printable:
       <br/>
     </p>
     
-    <%= link_to "Continue ...", root_path, :class => "button noprint" %>
+    {{= link_to "Continue ...", root_path, :class => "button noprint" }}
 
 
 email_signature:
