--- a/config/database.yml
+++ b/config/database.yml
@@ -40,27 +40,32 @@ devs_nesstar:
   database: 'db/prod_nesstar.db'
 
 
+development_base: &development_local
+  adapter: mysql2
+  username: adausers
+  password: adausers
+
 development:
-  adapter: sqlite3
-  database: 'db/dev.db'
+  <<: *development_local
+  database: adausers_dev
 
 development_logs:
-  adapter: sqlite3
-  database: 'db/dev_logs.db'
+  <<: *development_local
+  database: adausers_dev_logs
 
 development_nesstar:
-  adapter: sqlite3
-  database: 'db/dev_nesstar.db'
+  <<: *development_local
+  database: adausers_dev_nesstar
 
 
 test:
-  adapter: sqlite3
-  database: 'db/test.db'
+  <<: *development_local
+  database: adausers_test
 
 test_logs:
-  adapter: sqlite3
-  database: 'db/test_logs.db'
+  <<: *development_local
+  database: adausers_test_logs
 
 test_nesstar:
-  adapter: sqlite3
-  database: 'db/test_nesstar.db'
+  <<: *development_local
+  database: adausers_test_nesstar
