--- a/config/database.yml
+++ b/config/database.yml
@@ -39,7 +39,19 @@ devs_nesstar:
   adapter: sqlite3
   database: 'db/prod_nesstar.db'
 
+<% if ENV['use_mysql'].blank? %>
+development:
+  adapter: sqlite3
+  database: 'db/dev.db'
 
+development_logs:
+  adapter: sqlite3
+  database: 'db/dev_logs.db'
+
+development_nesstar:
+  adapter: sqlite3
+  database: 'db/dev_nesstar.db'
+<% else %>
 development_base: &development_local
   adapter: mysql2
   username: adausers
@@ -56,7 +68,7 @@ development_logs:
 development_nesstar:
   <<: *development_local
   database: adausers_dev_nesstar
-
+<% end %>
 
 test:
   <<: *development_local
