--- a/config/initializers/secrets.rb.example
+++ b/config/initializers/secrets.rb.example
@@ -6,10 +6,15 @@
 
 unless defined? Secrets
   module Secrets
-    # Database
+    # Production database
     DATABASE_HOST = ""
     DATABASE_USERNAME = ""
     DATABASE_PASSWORD = ""
+
+    # Test (devs) database
+    DEVS_DATABASE_HOST = ""
+    DEVS_DATABASE_USERNAME = ""
+    DEVS_DATABASE_PASSWORD = ""
 
     # Cookie secret token
     SECRET_TOKEN = ''
